--- a/contents/docs/classes/circle/index.mdx
+++ b/contents/docs/classes/circle/index.mdx
@@ -2,7 +2,15 @@
 title: Circle
 description: A representation of a circle shape with basic geometric operations and collision detection.
 ---
-- <ApiSig name="Circle" params={[{ name: "pos", type: "Vec2" }, { name: "radius", type: "float" }]} />
+
+## Constructor
+<div className="api-card">
+<ApiSig name="Circle" params={[{ name: "pos", type: "Vec2" }, { name: "radius", type: "float" }]} />
+
+_**Parameters**_
+- `pos` : Center position of the circle.
+- `radius` : Radius of the circle.
+</div>
 
 ## Properties
 <hr style={{marginBottom: 0}} />
