--- a/contents/docs/classes/easing-animation/index.mdx
+++ b/contents/docs/classes/easing-animation/index.mdx
@@ -2,7 +2,15 @@
 title: EasingAnimation
 description: An animation for easing transitions between two points.
 ---
-- <ApiSig name="EasingAnimation" multiline params={[{ name: "ease_func", type: "Callable[[float], float]" }, { name: "duration", type: "float" }]} />
+
+## Constructor
+<div className="api-card">
+<ApiSig name="EasingAnimation" multiline params={[{ name: "ease_func", type: "Callable[[float], float]" }, { name: "duration", type: "float" }]} />
+
+_**Parameters**_
+- `ease_func` : Easing function that maps [0, 1] → [0, 1].
+- `duration` : Time in seconds for full animation.
+</div>
 
 ## Properties
 <hr style={{marginBottom: 0}} />
