--- a/contents/docs/classes/index.mdx
+++ b/contents/docs/classes/index.mdx
@@ -7,7 +7,9 @@ Comprehensive documentation for all classes available in Kraken Engine. Each cla
 
 ## Animation & Sprites
 - [AnimationController](/docs/classes/animation-controller) - Manage sprite sheet animations
+- [Orchestrator](/docs/classes/orchestrator) - Timeline animator for transform effects
 - [SheetStrip](/docs/classes/sheet-strip) - Handle sprite sheet strips
+- [Sprite](/docs/classes/sprite) - Abstract base class for drawable game objects
 
 ## Audio
 - [Audio](/docs/classes/audio) - Play sound effects and music
@@ -44,6 +46,7 @@ Comprehensive documentation for all classes available in Kraken Engine. Each cla
 - [EasingAnimation](/docs/classes/easing-animation) - Animated easing transitions
 - [PolarCoordinate](/docs/classes/polar-coordinate) - Polar coordinate system
 - [Timer](/docs/classes/timer) - Game timers
+- [Transform](/docs/classes/transform) - 2D transformation with position, size, rotation, and scale
 - [Vec2](/docs/classes/vec2) - 2D vectors
 
 ---
