--- a/contents/docs/classes/input-action/index.mdx
+++ b/contents/docs/classes/input-action/index.mdx
@@ -3,8 +3,20 @@ title: InputAction
 description: An input action for binding keys, buttons, and axes.
 ---
 
+## Constructor
+<div className="api-card">
 - <ApiSig name="InputAction" params={[{ name: "scancode", type: "Scancode" }]} />
 - <ApiSig name="InputAction" params={[{ name: "keycode", type: "Keycode" }]} />
 - <ApiSig name="InputAction" params={[{ name: "mouse_button", type: "MouseButton" }]} />
 - <ApiSig name="InputAction" params={[{ name: "gamepad_button", type: "GamepadButton" }, { name: "slot", type: "int", default: "0" }]} />
 - <ApiSig name="InputAction" multiline params={[{ name: "gamepad_axis", type: "GamepadAxis" }, { name: "is_positive", type: "bool" }, { name: "slot", type: "int", default: "0" }]} />
+
+_**Parameters**_
+- `scancode` : Keyboard scancode.
+- `keycode` : Keyboard keycode.
+- `mouse_button` : Mouse button code.
+- `gamepad_button` : Gamepad button code.
+- `gamepad_axis` : Gamepad axis code.
+- `is_positive` : True for positive direction, False for negative.
+- `slot` : Gamepad slot (default is 0).
+</div>
