--- a/contents/docs/classes/line/index.mdx
+++ b/contents/docs/classes/line/index.mdx
@@ -2,11 +2,23 @@
 title: Line
 description: A representation of a line segment.
 ---
+
+## Constructor
+<div className="api-card">
 - <ApiSig name="Line" />
 - <ApiSig name="Line" params={[{ name: "a", type: "Vec2" }, { name: "b", type: "Vec2" }]} />
 - <ApiSig name="Line" params={[{ name: "a", type: "Vec2" }, { name: "bx", type: "float" }, { name: "by", type: "float" }]} />
 - <ApiSig name="Line" params={[{ name: "ax", type: "float" }, { name: "ay", type: "float" }, { name: "b", type: "Vec2" }]} />
 - <ApiSig name="Line" params={[{ name: "ax", type: "float" }, { name: "ay", type: "float" }, { name: "bx", type: "float" }, { name: "by", type: "float" }]} />
+
+_**Parameters**_
+- `a` : Point A as a Vec2.
+- `b` : Point B as a Vec2.
+- `ax` : X-coordinate of point A.
+- `ay` : Y-coordinate of point A.
+- `bx` : X-coordinate of point B.
+- `by` : Y-coordinate of point B.
+</div>
 
 ## Properties
 <hr style={{marginBottom: 0}} />
