--- a/contents/docs/classes/pixel-array/index.mdx
+++ b/contents/docs/classes/pixel-array/index.mdx
@@ -2,8 +2,16 @@
 title: PixelArray
 description: An array of pixel color data.
 ---
+
+## Constructor
+<div className="api-card">
 - <ApiSig name="PixelArray" params={[{ name: "size", type: "Vec2" }]} />
 - <ApiSig name="PixelArray" params={[{ name: "file_path", type: "str" }]} />
+
+_**Parameters**_
+- `size` : The size of the pixel array as (width, height).
+- `file_path` : Path to the image file to load.
+</div>
 
 ## Properties
 <hr style={{marginBottom: 0}} />
