--- a/contents/docs/classes/polar-coordinate/index.mdx
+++ b/contents/docs/classes/polar-coordinate/index.mdx
@@ -1,8 +1,17 @@
 ---
 title: PolarCoordinate
+description: A polar coordinate representation with angle and radius.
 ---
+
+## Constructor
+<div className="api-card">
 - <ApiSig name="PolarCoordinate" />
 - <ApiSig name="PolarCoordinate" params={[{ name: "angle", type: "float" }, { name: "radius", type: "float" }]} />
+
+_**Parameters**_
+- `angle` : Angle in radians.
+- `radius` : Distance from the origin.
+</div>
 
 ## Properties
 <hr style={{marginBottom: 0}} />
