--- a/contents/docs/classes/polygon/index.mdx
+++ b/contents/docs/classes/polygon/index.mdx
@@ -2,8 +2,15 @@
 title: Polygon
 description: A polygon shape defined by a series of points.
 ---
+
+## Constructor
+<div className="api-card">
 - <ApiSig name="Polygon" />
 - <ApiSig name="Polygon" params={[{ name: "points", type: "Sequence[Vec2]" }]} />
+
+_**Parameters**_
+- `points` : List of Vec2 points defining the polygon vertices.
+</div>
 
 ## Properties
 <hr style={{marginBottom: 0}} />
