--- a/contents/docs/classes/shader-uniform/index.mdx
+++ b/contents/docs/classes/shader-uniform/index.mdx
@@ -3,6 +3,13 @@ title: ShaderUniform
 description: An inheritable dataclass representing a shader uniform variable.
 ---
 
+## Constructor
+<div className="api-card">
+<ApiSig name="ShaderUniform" />
+
+Inherit from this class and define fields to create uniform data structures for shaders.
+</div>
+
 ## Methods
 ---
 
