--- a/contents/docs/classes/sheet-strip/index.mdx
+++ b/contents/docs/classes/sheet-strip/index.mdx
@@ -2,7 +2,16 @@
 title: SheetStrip
 description: Sheet strip object to use with AnimationController.
 ---
-- <ApiSig name="SheetStrip" params={[{ name: "name", type: "str" }, { name: "frame_count", type: "int" }, { name: "fps", type: "int" }]} />
+
+## Constructor
+<div className="api-card">
+<ApiSig name="SheetStrip" params={[{ name: "name", type: "str" }, { name: "frame_count", type: "int" }, { name: "fps", type: "float" }]} />
+
+_**Parameters**_
+- `name` : Unique identifier for this animation.
+- `frame_count` : Number of frames to extract from this strip/row.
+- `fps` : Frames per second for playback timing.
+</div>
 
 ## Properties
 <hr style={{marginBottom: 0}} />
