--- a/contents/docs/classes/text/index.mdx
+++ b/contents/docs/classes/text/index.mdx
@@ -2,7 +2,14 @@
 title: Text
 description: A text object for rendering strings with a specified font.
 ---
-- <ApiSig name="Text" params={[{ name: "font", type: "Font" }]} />
+
+## Constructor
+<div className="api-card">
+<ApiSig name="Text" params={[{ name: "font", type: "Font" }]} />
+
+_**Parameters**_
+- `font` : The font to use for rendering this text.
+</div>
 
 ## Properties
 <hr style={{marginBottom: 0}} />
