--- a/contents/docs/classes/tile-layer/index.mdx
+++ b/contents/docs/classes/tile-layer/index.mdx
@@ -3,6 +3,10 @@ title: TileLayer
 description: A single tile layer within a tile map.
 ---
 
+<Note>
+TileLayer objects are not directly constructable. They are obtained from TileMap methods.
+</Note>
+
 ## Properties
 <hr style={{marginBottom: 0}} />
 
