--- a/contents/docs/classes/tile/index.mdx
+++ b/contents/docs/classes/tile/index.mdx
@@ -3,6 +3,10 @@ title: Tile
 description: A single tile within a tile layer.
 ---
 
+<Note>
+Tile objects are not directly constructable. They are obtained from TileLayer methods.
+</Note>
+
 ## Properties
 <hr style={{marginBottom: 0}} />
 
