--- a/contents/docs/classes/timer/index.mdx
+++ b/contents/docs/classes/timer/index.mdx
@@ -2,7 +2,14 @@
 title: Timer
 description: A simple countdown timer.
 ---
-- <ApiSig name="Timer" params={[{ name: "duration", type: "float" }]} />
+
+## Constructor
+<div className="api-card">
+<ApiSig name="Timer" params={[{ name: "duration", type: "float" }]} />
+
+_**Parameters**_
+- `duration` : The countdown duration in seconds. Must be greater than 0.
+</div>
 
 ## Properties
 <hr style={{marginBottom: 0}} />
