--- a/contents/docs/functions/event/index.mdx
+++ b/contents/docs/functions/event/index.mdx
@@ -74,3 +74,23 @@ _**Parameters**_
 - `event` : The custom event to unschedule.
 
 </div>
+
+## Start Text Input
+<div className="api-card">
+
+<ApiSig name="start_text_input" returns="None" />
+
+Start text input for `TEXT_INPUT` and `TEXT_EDITING` events.
+Use this to enable receiving text input events from the keyboard.
+
+</div>
+
+## Stop Text Input
+<div className="api-card">
+
+<ApiSig name="stop_text_input" returns="None" />
+
+Stop text input for `TEXT_INPUT` and `TEXT_EDITING` events.
+Use this to disable receiving text input events from the keyboard.
+
+</div>
