--- a/contents/docs/functions/index.mdx
+++ b/contents/docs/functions/index.mdx
@@ -30,6 +30,11 @@ Event handling and management functions.
 
 [View Event Functions →](/docs/functions/event)
 
+## FX
+Effect functions for use with the Orchestrator class.
+
+[View FX Functions →](/docs/functions/fx)
+
 ## Gamepad
 Gamepad input detection and management.
 
@@ -50,6 +55,11 @@ Line geometry and intersection functions.
 
 [View Line Functions →](/docs/functions/line)
 
+## Log
+Logging and debugging message functions.
+
+[View Log Functions →](/docs/functions/log)
+
 ## Math
 Mathematical utilities and helper functions.
 
@@ -59,6 +69,11 @@ Mathematical utilities and helper functions.
 Mouse input and position functions.
 
 [View Mouse Functions →](/docs/functions/mouse)
+
+## Pixel Array
+PixelArray transformation and manipulation functions.
+
+[View Pixel Array Functions →](/docs/functions/pixel-array)
 
 ## Rect
 Rectangle geometry and collision functions.
@@ -74,11 +89,6 @@ Core rendering and graphics context functions.
 Time and delta time management functions.
 
 [View Time Functions →](/docs/functions/time)
-
-## Transform
-Transformation matrix and coordinate conversion functions.
-
-[View Transform Functions →](/docs/functions/transform)
 
 ## Viewport
 Viewport and screen management functions.
