--- a/contents/docs/classes/camera/index.mdx
+++ b/contents/docs/classes/camera/index.mdx
@@ -2,9 +2,18 @@
 title: Camera
 description: A class for managing the camera's position and view in the scene.
 ---
+
+## Constructor
+<div className="api-card">
 - <ApiSig name="Camera" />
 - <ApiSig name="Camera" params={[{ name: "pos", type: "Vec2" }]} />
 - <ApiSig name="Camera" params={[{ name: "x", type: "float" }, { name: "y", type: "float" }]} />
+
+_**Parameters**_
+- `pos` : The camera's initial position.
+- `x` : The x-coordinate of the camera's initial position.
+- `y` : The y-coordinate of the camera's initial position.
+</div>
 
 ## Properties
 <hr style={{marginBottom: 0}} />
@@ -14,7 +23,7 @@ description: A class for managing the camera's position and view in the scene.
 | `pos` | The camera's position | `Vec2` |
 
 ## Methods
----
+---0
 
 ### Set
 <div className="api-card">
