--- a/contents/docs/classes/shader-state/index.mdx
+++ b/contents/docs/classes/shader-state/index.mdx
@@ -2,12 +2,18 @@
 title: ShaderState
 description: A class for managing shader states in the rendering pipeline.
 ---
-- <ApiSig name="ShaderState" multiline params={
-    [
-        { name: "fragment_file_path", type: "str" },
-        { name: "uniform_buffer_count", type: "int", default: "0" },
-    ]
-    } />
+
+## Constructor
+<div className="api-card">
+<ApiSig name="ShaderState" multiline params={[
+    { name: "fragment_file_path", type: "str" },
+    { name: "uniform_buffer_count", type: "int", default: "0" }
+]} />
+
+_**Parameters**_
+- `fragment_file_path` : Path to the fragment shader file.
+- `uniform_buffer_count` : Number of uniform buffers used by the shader. Default is 0.
+</div>
 
 ## Methods
 ---
