--- a/contents/docs/classes/text/index.mdx
+++ b/contents/docs/classes/text/index.mdx
@@ -22,6 +22,8 @@ _**Parameters**_
 | `size` | The size of the text in pixels. | `Vec2` |
 | `width` | The width of the text in pixels. | `int` |
 | `height` | The height of the text in pixels. | `int` |
+| `shadow_color` | The color of the text shadow. | `Color` |
+| `shadow_offset` | The offset of the text shadow. | `Vec2` |
 
 ## Methods
 ---
@@ -33,6 +35,7 @@ _**Parameters**_
 
 Draw text to the renderer.
 `\n` will write text on a new line.
+A shadow is drawn if `shadow_color.a > 0` and `shadow_offset` is not `(0, 0)`.
 
 _**Parameters**_
 
