--- a/contents/docs/classes/tile-map/index.mdx
+++ b/contents/docs/classes/tile-map/index.mdx
@@ -18,33 +18,33 @@ _**Parameters**_
 ### Get Layer
 <div className="api-card">
 
-<ApiSig name="get_layer" params={[{name: 'name', type: 'str'}, {name: 'type', type: 'Layer.Type', default: 'Layer.TILE'}]} returns="Layer" />
+<ApiSig name="get_layer" params={[{name: 'name', type: 'str'}, {name: 'type', type: 'TileLayer.Type', default: 'TileLayer.TILE'}]} returns="TileLayer" />
 
 Get a layer object from the tile map by name and type.
 
 _**Returns**_
 
-`Layer` : The layer object with the specified name and type.
+`TileLayer` : The layer object with the specified name and type.
 
 </div>
 
 ### Get Layers
 <div className="api-card">
 
-<ApiSig name="get_layers" returns="list[Layer]" />
+<ApiSig name="get_layers" returns="list[TileLayer]" />
 
 Get all layers in the tile map.
 
 _**Returns**_
 
-`list[Layer]` : A list of all layers in the tile map.
+`list[TileLayer]` : A list of all layers in the tile map.
 
 </div>
 
 ### Get Tile Collection
 <div className="api-card">
 
-<ApiSig name="get_tile_collection" params={[{name: 'layers', type: 'Sequence[Layer]'}]} returns="list[Tile]" />
+<ApiSig name="get_tile_collection" params={[{name: 'layers', type: 'Sequence[TileLayer]'}]} returns="list[Tile]" />
 
 Get all tiles from the specified layers.
 
